fixing block lack of alignment

--- a/assets/styles/blocks/_main-block.scss
+++ b/assets/styles/blocks/_main-block.scss
@@ -51,7 +51,7 @@
     align-items: flex-start;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
   }
   &__title {
     font-size: 6.4rem;
